--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appError.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appError.properties
@@ -1,1 +1,1 @@
-screenNameNotFound=Die Ansicht mit dem Namen {0} konnte nicht gefunden werden!
+error_screenNameNotFound=Die Ansicht mit dem Namen {0} konnte nicht gefunden werden!
