--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appError.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appError.properties
@@ -1,1 +1,12 @@
 error_screenNameNotFound=Die Ansicht mit dem Namen {0} konnte nicht gefunden werden!
+error_logout_failed=Abmeldung fehlgeschlagen! Bitte wiederholen oder Anwenung neuladen
+
+# Role management screen
+error_role_service_operation=Beim Aufruf der Rollenverwaltung ist ein Fehler aufgetreten! Bitte ?berpr?fen Sie die Netzwerkverbindung und wiederholen Sie die letzte Aktion
+
+# User management screen
+error_user_service_operation=Beim Aufruf der Benutzerverwaltung ist ein Fehler aufgetreten! Bitte ?berpr?fen Sie die Netzwerkverbindung und wiederholen Sie die letzte Aktion
+
+# Module management screen
+error_module_moduleName_required=Modulname ist erforderlich
+error_module_url_required=URL ist erforderlich
