--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appError.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appError.properties
@@ -1,1 +1,12 @@
 error_screenNameNotFound=Screen with name {0} not found!
+error_logout_failed=Logout failed! Please try again, or reload the application
+
+# Role management screen
+error_role_service_operation=Error executing operation on Role backend service! Please check your network connection and try again
+
+# User management screen
+error_user_service_operation=Error executing operation on User backend service! Please check your network connection and try again
+
+# Module management screen
+error_module_moduleName_required=Modulename is required
+error_module_url_required=URL is required
