Worked on UserPreferencesDialog
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1429 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -47,6 +47,11 @@ txt_login_title=Application Login
 lbl_login_title=LOGIN
 lbl_login_username=User
 lbl_login_password=Password
+txt_user_pref_title=Change User Preferences
+lbl_user_pref_title=User
+txt_user_pref_password1=New Password :
+txt_user_pref_password2=Re-type Password :
+txt_user_pref_language=Language
 
 # Role Management screen
 txt_role_screen_header=Roles
