--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -47,6 +47,11 @@ txt_login_title=Benutzeranmeldung
 lbl_login_title=ANMELDEN
 lbl_login_username=Benutzer
 lbl_login_password=Passwort
+txt_user_pref_title=Benutzereinstellungen ändern
+lbl_user_pref_title=Benutzer
+txt_user_pref_password1=Neues Passwort :
+txt_user_pref_password2=Passwort wiederholen :
+txt_user_pref_language=Sprache
 
 # Role Management screen
 txt_role_screen_header=Rollen
