--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.lib/src/main/resources/assets/locale/en_US/commonMain.properties
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.lib/src/main/resources/assets/locale/en_US/commonMain.properties
@@ -8,6 +8,14 @@ menu_common_locationGroups=Location Groups
 
 # Location Group View
 txt_locationGroupView_header=Location Groups
+txt_locationGroupView_headerLocations=Locations
 txt_locationGroupView_details_header=Details
 ttip_locationGroup_reload_groups=Reload the tree of Location Groups
 ttip_locationGroup_save_group=Save a modified Location Group
+
+# Location View
+info_locationView_select_message_to_remove=Please select one or more Messages to be removed
+ttip_locationView_save_location=Save an existing Location
+ttip_locationView_reload_locations=Refresh the list of Locations
+
+# Location Type View
