Worked on module loading and logout mechanism
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1446 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -47,6 +47,8 @@ txt_login_title=Benutzeranmeldung
 lbl_login_title=ANMELDEN
 lbl_login_username=Benutzer
 lbl_login_password=Passwort
+txt_login_locked_by=Zugang gesperrt durch {0}
+txt_login_not_logged_in=Nicht angemeldet
 txt_user_pref_title=Benutzereinstellungen ändern
 lbl_user_pref_title=Benutzer
 txt_user_pref_password1=Neues Passwort :
