--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -47,6 +47,8 @@ txt_login_title=Application Login
 lbl_login_title=LOGIN
 lbl_login_username=User
 lbl_login_password=Password
+txt_login_locked_by=Application locked by {0}
+txt_login_not_logged_in=Not logged in
 txt_user_pref_title=Change User Preferences
 lbl_user_pref_title=User
 txt_user_pref_password1=New Password :
