--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/en_US/commonEntity.properties
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/en_US/commonEntity.properties
@@ -34,3 +34,7 @@ entity_location_messages=Messages
 # Location Type
 entity_locationType=Location Type
 entity_locationType_type=Type
+entity_locationType_description=Description
+entity_locationType_height=Height
+entity_locationType_width=Width
+entity_locationType_length=Length
