--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/en_US/commonMain.properties
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/en_US/commonMain.properties
@@ -16,6 +16,15 @@ ttip_locationGroup_save_group=Save a modified Location Group
 # Location View
 info_locationView_select_message_to_remove=Please select one or more Messages to be removed
 ttip_locationView_save_location=Save an existing Location
-ttip_locationView_reload_locations=Refresh the list of Locations
+ttip_locationView_reload_locations=Reload the list of Locations
 
 # Location Type View
+info_locationTypeView_select_locationType=Please select at least one Location Type to delete
+txt_deleteLocationTypeDialog_header=Delete selected Location Types
+txt_locationTypeView_header=Location Types
+ttip_locationTypeView_createBtn=Create a new Location Type
+ttip_locationTypeView_deleteBtn=Delete an existing Location Type
+ttip_locationTypeView_saveBtn=Save an existing Location Type
+ttip_locationTypeView_reloadBtn=Reload the list of Location Types
+
+
