--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/de_DE/commonMain.properties
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/de_DE/commonMain.properties
@@ -21,7 +21,7 @@ ttip_locationView_reload_locations=Alle Locations neu laden
 # Location Type View
 info_locationTypeView_select_locationType=Bitte wählen Sie mindestens einen Location Type der entfernt werden soll!
 txt_deleteLocationTypeDialog_header=Ausgewählte Location Types löschen
-txt_locationTypeView_header=Location Types
+txt_locationTypeView_header=Location Type
 ttip_locationTypeView_createBtn=Einen neuen Location Type anlegen
 ttip_locationTypeView_deleteBtn=Einen bestehenden Location Type löschen
 ttip_locationTypeView_saveBtn=Änderungen an einem Location Type speichern
