--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/en_US/commonMain.properties
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/resources/assets/locale/en_US/commonMain.properties
@@ -21,7 +21,7 @@ ttip_locationView_reload_locations=Reload the list of Locations
 # Location Type View
 info_locationTypeView_select_locationType=Please select at least one Location Type to delete
 txt_deleteLocationTypeDialog_header=Delete selected Location Types
-txt_locationTypeView_header=Location Types
+txt_locationTypeView_header=Location Type
 ttip_locationTypeView_createBtn=Create a new Location Type
 ttip_locationTypeView_deleteBtn=Delete an existing Location Type
 ttip_locationTypeView_saveBtn=Save an existing Location Type
