Worked on PropertyScreen
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1462 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -3,6 +3,7 @@ menu_app_applicaton=Anwendung
 menu_app_users=Benutzer
 menu_app_roles=Rollen
 menu_app_modules=Module
+menu_app_preferences=Einstellungen
 btn_accept=Bestätigen
 btn_browse=Durchsuchen
 btn_cancel=Abbrechen
