--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appError.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appError.properties
@@ -10,3 +10,6 @@ error_user_service_operation=Error executing operation on User backend service! 
 # Module management screen
 error_module_moduleName_required=Modulename is required
 error_module_url_required=URL is required
+
+# Settings management screen
+error_configuration_service_operation=Error executing operation on Configuration backend service! Please check your network connection and try again
