--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -3,6 +3,7 @@ menu_app_applicaton=Application
 menu_app_users=Users
 menu_app_roles=Roles
 menu_app_modules=Modules
+menu_app_preferences=Preferences
 btn_accept=Accept
 btn_browse=Browse
 btn_cancel=Cancel
