worked on preferences service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1468 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -104,7 +104,6 @@ entity_user_locked=Locked
 entity_user_expirationDate=Expiration Date
 entity_user_roles=Roles
 
-
 # Module Management screen
 txt_module_screen_header=Modules
 txt_module_info_text=To change the startup order of Modules drag and drop the Modules in the list.
@@ -117,3 +116,15 @@ ttip_module_load=Module is currently unloaded, click to load
 entity_module_moduleName=Modulename
 entity_module_description=Description
 entity_module_url=URL
+
+# Preferences Management screen
+txt_preferences_screen_header=Preferences
+ttip_preferences_screen_add_pref=Create a new Preference
+ttip_preferences_screen_delete_user=Delete an existing Preference
+ttip_preferences_screen_save_user=Save an already existing Preference
+ttip_preferences_screen_reload_users=Reload all Preferences
+lbl_preferences_screen_app_prefs=Application Preferences
+lbl_preferences_screen_module_prefs=Module Preferences
+lbl_preferences_screen_user_prefs=User Preferences
+lbl_preferences_screen_details=Details
+
