worked on preferences service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1472 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -104,7 +104,6 @@ entity_user_locked=Gesperrt
 entity_user_expirationDate=Sperrdatum
 entity_user_roles=Rollen
 
-
 # Module Management screen
 txt_module_screen_header=Module
 txt_module_info_text=Die Startreihenfolge der Module wird durch die Reihenfolge der Auflistung in der linken Liste bestimmt.
@@ -117,3 +116,15 @@ ttip_module_load=Das Modul ist derzeit nicht geladen, klicken zum laden
 entity_module_moduleName=Modulname
 entity_module_description=Beschreibung
 entity_module_url=URL
+
+# Preferences Management screen
+txt_preferences_screen_header=Parameter
+ttip_preferences_screen_add_pref=Einen neuen Parameter anlegen
+ttip_preferences_screen_delete_user=Den ausgewählten Parameter löschen
+ttip_preferences_screen_save_user=Änderungen an einem Parameter speichern
+ttip_preferences_screen_reload_users=Alle Parameter neu laden
+lbl_preferences_screen_app_prefs=Anwendungs Parameter
+lbl_preferences_screen_module_prefs=Modul Parameter
+lbl_preferences_screen_user_prefs=Benutzer Parameter
+lbl_preferences_screen_details=Details
+
