worked on preferences service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1474 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -125,6 +125,7 @@ ttip_preferences_screen_save_user=Änderungen an einem Parameter speichern
 ttip_preferences_screen_reload_users=Alle Parameter neu laden
 lbl_preferences_screen_app_prefs=Anwendungs Parameter
 lbl_preferences_screen_module_prefs=Modul Parameter
+lbl_preferences_screen_role_prefs=Rollen Parameter
 lbl_preferences_screen_user_prefs=Benutzer Parameter
 lbl_preferences_screen_details=Details
 
