--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -56,6 +56,8 @@ txt_user_pref_password1=New Password :
 txt_user_pref_password2=Re-type Password :
 txt_user_pref_language=Language
 
+txt_create_preference_title=Create Preference
+
 # Role Management screen
 txt_role_screen_header=Roles
 txt_role_assigned_grants=Assigned Grants
@@ -125,6 +127,7 @@ ttip_preferences_screen_save_user=Save an already existing Preference
 ttip_preferences_screen_reload_users=Reload all Preferences
 lbl_preferences_screen_app_prefs=Application Preferences
 lbl_preferences_screen_module_prefs=Module Preferences
+lbl_preferences_screen_role_prefs=Role Preferences
 lbl_preferences_screen_user_prefs=User Preferences
 lbl_preferences_screen_details=Details
 
