Worked on preferences stuff
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1490 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/de_DE/corLibMain.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/de_DE/corLibMain.properties
@@ -5,3 +5,9 @@ btn_cancel=Abbrechen
 # Dialogs
 txt_ListDialog_panelHeaderText=KEIN TITEL VERGEBEN
 lbl_ListDialog_labelText=KEINE BEZEICHNUNG VERGEBEN
+
+# Preference Types
+txt_preferences_Application=Anwendung
+txt_preferences_Module=Modul
+txt_preferences_Role=Rolle
+txt_preferences_User=Benutzer
