--- a/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/en_US/corLibMain.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/en_US/corLibMain.properties
@@ -5,3 +5,9 @@ btn_cancel=Cancel
 # Dialogs
 txt_ListDialog_panelHeaderText=NO TITLE SET
 lbl_ListDialog_labelText=NO LABEL SET
+
+# Preference Types
+txt_preferences_Application=Application
+txt_preferences_Module=Module
+txt_preferences_Role=Role
+txt_preferences_User=User
