Worked on UserPreferences
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1503 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -5,6 +5,7 @@ menu_app_roles=Rollen
 menu_app_modules=Module
 menu_app_preferences=Einstellungen
 btn_accept=Bestätigen
+btn_assign=Zuweisen
 btn_browse=Durchsuchen
 btn_cancel=Abbrechen
 btn_change=Ändern
@@ -28,6 +29,8 @@ ttip_assignUsers_move_right=Nach rechts
 txt_assignGrants_title=Berechtigungen der Rolle {0} zuweisen
 lbl_assignGrants_not_assigned=Alle Berechtigungen
 lbl_assignGrants_assigned=Zugewiesene Berechtigungen
+txt_assign_roles_users=Rollen zuweisen
+lbl_assign_roles_users={0} Rollen zuweisen
 txt_change_password_tite=Benutzerpasswort ändern
 txt_change_password_header=Bitte ein neues Passwort für den Benutzer eingeben
 txt_change_password_password1=Neues Passwort :
