--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -5,6 +5,7 @@ menu_app_roles=Roles
 menu_app_modules=Modules
 menu_app_preferences=Preferences
 btn_accept=Accept
+btn_assign=Assign
 btn_browse=Browse
 btn_cancel=Cancel
 btn_change=Change
@@ -28,6 +29,8 @@ ttip_assignUsers_move_right=Move right
 txt_assignGrants_title=Assign Grants to Role {0}
 lbl_assignGrants_not_assigned=All Grants
 lbl_assignGrants_assigned=Assigned Grants
+txt_assign_roles_users=Assign Roles
+lbl_assign_roles_users=Assign Roles to {0}
 txt_change_password_tite=Change User Password
 txt_change_password_header=Please enter a new Password for this User
 txt_change_password_password1=New Password :
