Worked on preferences, added Javadoc, replaced hard coded version in template.mf with Maven property
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1507 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appEntity.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appEntity.properties
@@ -1,9 +1,9 @@
 # Preferences
-entity_preference_key=Schlüssel
+entity_preference_key=SchlÃ¼ssel
 entity_preference_owner=Besitzer
 entity_preference_description=Beschreibung
 entity_preference_type=Typ
-entity_preference_value=Wert
+entity_preference_value=Zeichenkette
 entity_preference_floatValue=Numerischer Wert
 entity_preference_minimum=Minimaler Wert
 entity_preference_maximum=Maximaler Wert
