--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appEntity.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appEntity.properties
@@ -1,4 +1,8 @@
 # Preferences
+entity_preference_Application=Anwendung
+entity_preference_Module=Modul
+entity_preference_Role=Rolle
+entity_preference_User=Benutzer
 entity_preference_key=Schlüssel
 entity_preference_owner=Besitzer
 entity_preference_description=Beschreibung
@@ -7,4 +11,5 @@ entity_preference_value=Zeichenkette
 entity_preference_floatValue=Numerischer Wert
 entity_preference_minimum=Minimaler Wert
 entity_preference_maximum=Maximaler Wert
+entity_preference_fromFile=Stammt aus Datei
 
