Reorganized, added docs and utility classes.
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1521 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/de_DE/corLibMain.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/de_DE/corLibMain.properties
@@ -2,6 +2,9 @@
 btn_submit=Fortfahren
 btn_cancel=Abbrechen
 
+# Defaults
+DEFAULT_NULL_NUMBER=Nicht zugewiesen
+
 # Dialogs
 txt_ListDialog_panelHeaderText=KEIN TITEL VERGEBEN
 lbl_ListDialog_labelText=KEINE BEZEICHNUNG VERGEBEN
