--- a/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/en_US/corLibMain.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/en_US/corLibMain.properties
@@ -2,6 +2,9 @@
 btn_submit=Submit
 btn_cancel=Cancel
 
+# Defaults
+DEFAULT_NULL_NUMBER=Not assigned
+
 # Dialogs
 txt_ListDialog_panelHeaderText=NO TITLE SET
 lbl_ListDialog_labelText=NO LABEL SET
