Some minor changes on the preferences fragments
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1528 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -58,6 +58,7 @@ lbl_user_pref_title=Benutzer
 txt_user_pref_password1=Neues Passwort :
 txt_user_pref_password2=Passwort wiederholen :
 txt_user_pref_language=Sprache
+txt_create_preference_title=Parameter anlegen
 
 # Role Management screen
 txt_role_screen_header=Rollen
@@ -126,9 +127,5 @@ ttip_preferences_screen_add_pref=Einen neuen Parameter anlegen
 ttip_preferences_screen_delete_user=Den ausgewählten Parameter löschen
 ttip_preferences_screen_save_user=Änderungen an einem Parameter speichern
 ttip_preferences_screen_reload_users=Alle Parameter neu laden
-lbl_preferences_screen_app_prefs=Anwendungs Parameter
-lbl_preferences_screen_module_prefs=Modul Parameter
-lbl_preferences_screen_role_prefs=Rollen Parameter
-lbl_preferences_screen_user_prefs=Benutzer Parameter
 lbl_preferences_screen_details=Details
-
+info_preferences_not_selected=Bitte wählen Sie einen Parameter aus
