--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -58,7 +58,6 @@ lbl_user_pref_title=User
 txt_user_pref_password1=New Password :
 txt_user_pref_password2=Re-type Password :
 txt_user_pref_language=Language
-
 txt_create_preference_title=Create Preference
 
 # Role Management screen
@@ -128,9 +127,5 @@ ttip_preferences_screen_add_pref=Create a new Preference
 ttip_preferences_screen_delete_user=Delete an existing Preference
 ttip_preferences_screen_save_user=Save an already existing Preference
 ttip_preferences_screen_reload_users=Reload all Preferences
-lbl_preferences_screen_app_prefs=Application Preferences
-lbl_preferences_screen_module_prefs=Module Preferences
-lbl_preferences_screen_role_prefs=Role Preferences
-lbl_preferences_screen_user_prefs=User Preferences
 lbl_preferences_screen_details=Details
-
+info_preferences_not_selected=Please selected a Preference before
