minor change, restructured controllers
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1530 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appEntity.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appEntity.properties
@@ -3,7 +3,7 @@ entity_preference_Application=Anwendung
 entity_preference_Module=Modul
 entity_preference_Role=Rolle
 entity_preference_User=Benutzer
-entity_preference_key=SchlÃ¼ssel
+entity_preference_key=Schlüssel
 entity_preference_owner=Besitzer
 entity_preference_description=Beschreibung
 entity_preference_type=Typ
