--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -90,6 +90,8 @@ ttip_user_reload_users=Refresh the list of Users
 ttip_user_change_users_password=Change the current User Password
 ttip_user_change_users_image=Change the photo of the current User
 info_user_save_user_before=Please save the User first to add an image
+info_user_no_user_selected=Please selected an User
+info_user_no_username_set=Please provide the User's name
 info_user_valid_expiration_date=Please enter a valid expiration date
 entity_user=User
 entity_user_username=Username
