--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -4,14 +4,14 @@ menu_app_users=Benutzer
 menu_app_roles=Rollen
 menu_app_modules=Module
 menu_app_preferences=Einstellungen
-btn_accept=BestÃ¤tigen
+btn_accept=Bestätigen
 btn_assign=Zuweisen
 btn_browse=Durchsuchen
 btn_cancel=Abbrechen
-btn_change=Ã„ndern
+btn_change=Ändern
 btn_close=Schliessen
 btn_create=Anlegen
-btn_delete=LÃ¶schen
+btn_delete=Löschen
 btn_login=Anmelden
 btn_save=Speichern
 btn_upload=Hochladen
@@ -31,21 +31,21 @@ lbl_assignGrants_not_assigned=Alle Berechtigungen
 lbl_assignGrants_assigned=Zugewiesene Berechtigungen
 txt_assign_roles_users=Rollen zuweisen
 lbl_assign_roles_users={0} Rollen zuweisen
-txt_change_password_tite=Benutzerpasswort Ã¤ndern
-txt_change_password_header=Bitte ein neues Passwort fÃ¼r den Benutzer eingeben
+txt_change_password_tite=Benutzerpasswort Ändern
+txt_change_password_header=Bitte ein neues Passwort für den Benutzer eingeben
 txt_change_password_password1=Neues Passwort :
 txt_change_password_password2=Passwort wiederholen:
 info_change_password_wrong=Bitte Passwort wiederholen
-txt_delete_roles_title=Rollen lÃ¶schen
-txt_delete_roles_confirmation=Wollen Sie die ausgewÃ¤hlten Rollen wirklich lÃ¶schen?
+txt_delete_roles_title=Rollen löschen
+txt_delete_roles_confirmation=Wollen Sie die ausgewählten Rollen wirklich löschen?
 txt_create_role_title=Rolle anlegen
 txt_file_upload_title=Datei Hochladen
 lbl_file_upload_progress_start=Fortschritt 0%
-lbl_file_upload_progresssing=Hochladen lÃ¤uft ...
+lbl_file_upload_progresssing=Hochladen läuft ...
 lbl_file_upload_completed=Fertig
 txt_file_upload_uploaded= hochgeladen
 lbl_file_upload_url=URL zum Hochladen :
-lbl_file_upload_selected_file=AusgewÃ¤hlte Datei :
+lbl_file_upload_selected_file=Ausgewählte Datei :
 lbl_file_upload_progress=Fortschritt :
 txt_login_title=Benutzeranmeldung
 lbl_login_title=ANMELDEN
@@ -53,7 +53,7 @@ lbl_login_username=Benutzer
 lbl_login_password=Passwort
 txt_login_locked_by=Zugang gesperrt durch {0}
 txt_login_not_logged_in=Nicht angemeldet
-txt_user_pref_title=Benutzereinstellungen Ã¤ndern
+txt_user_pref_title=Benutzereinstellungen Ändern
 lbl_user_pref_title=Benutzer
 txt_user_pref_password1=Neues Passwort :
 txt_user_pref_password2=Passwort wiederholen :
@@ -66,17 +66,17 @@ txt_role_assigned_grants=Zugewiesene Rechte
 txt_role_assigned_users=Zugewiesene Benutzer
 ttip_role_add_role=Eine neue Rolle anlegen
 ttip_role_save_role=Ã„nderungen an einer Rolle speichern
-ttip_role_delete_role=Eine ausgewÃ¤hlte Rolle lÃ¶schen
+ttip_role_delete_role=Eine ausgewählte Rolle löschen
 ttip_role_reload_roles=Die Liste der Rollen neu laden
 ttip_role_assign_grants=Einer Rolle Rechte zuweisen
 ttip_role_assign_users=Einer Rolle Benutzer zuweisen
 ttip_role_remove_users_from_role=Benutzer einer Rolle entziehen
-info_role_select_role_to_remove=Bitte wÃ¤hlen sie eine Rolle aus
-info_role_select_role_to_save=Bitte wÃ¤hlen sie eine Rolle aus
-info_role_select_role_to_remove_users=Bitte wÃ¤hlen sie Benutzer aus die von der Rolle entfernt werden sollen
-info_role_select_role_add_user=Bitte wÃ¤hlen sie Benutzer aus die der Rolle zugefÃ¼gt werden sollen
-info_role_select_role_assign_grants=Bitte wÃ¤hlen sie eine Rolle aus um die Rechte zu bestimmen
-info_role_title_change_role=Rolle Ã¤ndern
+info_role_select_role_to_remove=Bitte wählen sie eine Rolle aus
+info_role_select_role_to_save=Bitte wählen sie eine Rolle aus
+info_role_select_role_to_remove_users=Bitte wählen sie Benutzer aus die von der Rolle entfernt werden sollen
+info_role_select_role_add_user=Bitte wählen sie Benutzer aus die der Rolle zugefügt werden sollen
+info_role_select_role_assign_grants=Bitte wählen sie eine Rolle aus um die Rechte zu bestimmen
+info_role_title_change_role=Rolle ändern
 entity_role=Rolle
 entity_role_name=Name
 entity_role_description=Beschreibung
@@ -84,23 +84,25 @@ entity_role_description=Beschreibung
 # User Management screen
 txt_user_screen_header=Benutzer
 ttip_user_add_user=Einen neuen Benutzer anlegen
-ttip_user_save_user=Ã„nderungen an einem Benutzer speichern
-ttip_user_delete_user=Einen ausgewÃ¤hlten Benutzer lÃ¶schen
+ttip_user_save_user=Änderungen an einem Benutzer speichern
+ttip_user_delete_user=Einen ausgewählten Benutzer löschen
 ttip_user_reload_users=Die Liste der Benutzer neu laden
-ttip_user_change_users_password=Das Passwort des ausgewÃ¤hlten Benutzers Ã¤ndern
-ttip_user_change_users_image=Das Bild des ausgewÃ¤hlten Benutzers Ã¤ndern
+ttip_user_change_users_password=Das Passwort des ausgewählten Benutzers ändern
+ttip_user_change_users_image=Das Bild des ausgewählten Benutzers ändern
 info_user_save_user_before=Bitte speichern sie den Benutzer zuerst
-info_user_valid_expiration_date=Bitte legen sie ein gÃ¼ltiges Sperrdatum fest
+info_user_no_user_selected=Bitte wählen sie zuerst einen Benutzer aus
+info_user_no_username_set=Bitte geben sie einen gültigen Benutzernamen an
+info_user_valid_expiration_date=Bitte legen sie ein gültiges Sperrdatum fest
 entity_user=Benutzer
 entity_user_username=Benutzername
-entity_user_fullname=VollstÃ¤ndiger Name
+entity_user_fullname=Vollständiger Name
 entity_user_description=Beschreibung
 entity_user_phone=Telefon Nr.
 entity_user_skypeName=IM
 entity_user_department=Abteilung
-entity_user_office=BÃ¼ro
+entity_user_office=Büro
 entity_user_sex=Geschlecht
-entity_user_sex_male=MÃ¤nnlich
+entity_user_sex_male=Männlich
 entity_user_sex_female=Weiblich
 entity_user_comment=Kommentar
 entity_user_enabled=Freigegeben
@@ -113,8 +115,8 @@ txt_module_screen_header=Module
 txt_module_info_text=Die Startreihenfolge der Module wird durch die Reihenfolge der Auflistung in der linken Liste bestimmt.
 lbl_module_loadOnStartup=Beim Start laden
 ttip_module_add=Ein neues Modul anlegen
-ttip_module_save=Ã„nderungen an einem Modul speichern
-ttip_module_delete=Das ausgewÃ¤hlte Modul lÃ¶schen
+ttip_module_save=Änderungen an einem Modul speichern
+ttip_module_delete=Das ausgewählte Modul löschen
 ttip_module_unload=Das Modul ist derzeit geladen, klicken zum entladen
 ttip_module_load=Das Modul ist derzeit nicht geladen, klicken zum laden
 entity_module_moduleName=Modulname
@@ -124,8 +126,8 @@ entity_module_url=URL
 # Preferences Management screen
 txt_preferences_screen_header=Parameter
 ttip_preferences_screen_add_pref=Einen neuen Parameter anlegen
-ttip_preferences_screen_delete_user=Den ausgewÃ¤hlten Parameter lÃ¶schen
-ttip_preferences_screen_save_user=Ã„nderungen an einem Parameter speichern
+ttip_preferences_screen_delete_user=Den ausgewählten Parameter löschen
+ttip_preferences_screen_save_user=Änderungen an einem Parameter speichern
 ttip_preferences_screen_reload_users=Alle Parameter neu laden
 lbl_preferences_screen_details=Details
-info_preferences_not_selected=Bitte wÃ¤hlen Sie einen Parameter aus
+info_preferences_not_selected=Bitte wählen Sie einen Parameter aus
