Some changes on the properties modules
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1546 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -59,6 +59,7 @@ txt_user_pref_password1=New Password :
 txt_user_pref_password2=Re-type Password :
 txt_user_pref_language=Language
 txt_create_preference_title=Create Preference
+info_user_preference_password_invalid=Please check the entered password
 
 # Role Management screen
 txt_role_screen_header=Roles
