Solved some bugs in roles and users views
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1589 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appError.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appError.properties
@@ -5,6 +5,7 @@ error_logout_failed=Abmeldung fehlgeschlagen! Bitte wiederholen oder Anwendung n
 error_role_service_operation=Beim Aufruf der Rollenverwaltung ist ein Fehler aufgetreten! Bitte überprüfen Sie die Netzwerkverbindung und wiederholen Sie die letzte Aktion
 
 # User management screen
+error_password_invalid=Das Passwort ist nicht gültig
 error_user_service_operation=Beim Aufruf der Benutzerverwaltung ist ein Fehler aufgetreten! Bitte überprüfen Sie die Netzwerkverbindung und wiederholen Sie die letzte Aktion
 
 # Module management screen
