--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -31,13 +31,13 @@ lbl_assignGrants_not_assigned=All Grants
 lbl_assignGrants_assigned=Assigned Grants
 txt_assign_roles_users=Assign Roles
 lbl_assign_roles_users=Assign Roles to {0}
-txt_change_password_tite=Change User Password
+txt_change_password_title=Change User Password
 txt_change_password_header=Please enter a new Password for this User
 txt_change_password_password1=New Password :
 txt_change_password_password2=Re-type Password :
 info_change_password_wrong=Please re-type your password again
 txt_delete_roles_title=Delete Roles
-txt_delete_roles_confirmation=Do you really want to delete?
+txt_delete_roles_confirmation=Do you really want to delete these Roles?
 txt_create_role_title=Create Role
 txt_file_upload_title=File Upload
 lbl_file_upload_progress_start=Loading 0%
@@ -73,7 +73,6 @@ ttip_role_assign_grants=Assign Grants to the selected Role
 ttip_role_assign_users=Assign Users to the selected Role
 ttip_role_remove_users_from_role=Remove Users from the selected Role
 info_role_select_role_to_remove=Please select a Role to remove
-info_role_select_role_to_save=Please select a Role to save
 info_role_select_role_to_remove_users=Please select one or more Users to be removed from this Role
 info_role_select_role_add_user=Please select a Role to add a User for
 info_role_select_role_assign_grants=Please select a Role to assign Grants to it
