--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appError.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appError.properties
@@ -5,6 +5,7 @@ error_logout_failed=Logout failed! Please try again, or reload the application
 error_role_service_operation=Error executing operation on Role backend service! Please check your network connection and try again
 
 # User management screen
+error_password_invalid=The password you provided is invalid
 error_user_service_operation=Error executing operation on User backend service! Please check your network connection and try again
 
 # Module management screen
