Solved some bugs in roles and users views
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1592 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/de_DE/appMain.properties
@@ -21,6 +21,10 @@ btn_header_logout=Abmelden
 btn_header_lock=Sperren
 
 # Dialogues
+txt_title_confirmation=Bestätigung
+txt_title_information=Information
+txt_title_warning=Warnung
+txt_title_error=Fehler
 txt_assignUsers_title=Benutzer der Rolle {0} zuweisen
 lbl_assignUsers_not_assigned=Alle Benutzer
 lbl_assignUsers_assigned=Zugewiesene Benutzer
@@ -58,7 +62,6 @@ lbl_user_pref_title=Benutzer
 txt_user_pref_password1=Neues Passwort :
 txt_user_pref_password2=Passwort wiederholen :
 txt_user_pref_language=Sprache
-txt_create_preference_title=Parameter anlegen
 info_user_preference_password_invalid=Bitte überprüfen sie das neue Passwort
 
 # Role Management screen
@@ -93,6 +96,7 @@ info_user_save_user_before=Bitte speichern sie den Benutzer zuerst
 info_user_no_user_selected=Bitte wählen sie zuerst einen Benutzer aus
 info_user_no_username_set=Bitte geben sie einen gültigen Benutzernamen an
 info_user_valid_expiration_date=Bitte legen sie ein gültiges Sperrdatum fest
+txt_remove_expiration_date=Soll das Sperrdatum zurückgesetzt werden?
 entity_user=Benutzer
 entity_user_username=Benutzername
 entity_user_fullname=Vollständiger Name
@@ -131,3 +135,5 @@ ttip_preferences_screen_save_user=Änderungen an einem Parameter speichern
 ttip_preferences_screen_reload_users=Alle Parameter neu laden
 lbl_preferences_screen_details=Details
 info_preferences_not_selected=Bitte wählen Sie einen Parameter aus
+txt_create_preference_title=Parameter anlegen
+txt_create_preference_information=Bitte wählen sie den Eigentümer des Parameters aus
