--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/resources/assets/locale/en_US/appMain.properties
@@ -21,6 +21,10 @@ btn_header_logout=Logout
 btn_header_lock=Lock
 
 # Dialogues
+txt_title_confirmation=Confirmation
+txt_title_information=Information
+txt_title_warning=Warning
+txt_title_error=Error
 txt_assignUsers_title=Assign Users to Role {0}
 lbl_assignUsers_not_assigned=All Users
 lbl_assignUsers_assigned=Assigned Users
@@ -59,6 +63,7 @@ txt_user_pref_password1=New Password :
 txt_user_pref_password2=Re-type Password :
 txt_user_pref_language=Language
 txt_create_preference_title=Create Preference
+txt_create_preference_information=Please select an owner of this preference
 info_user_preference_password_invalid=Please check the entered password
 
 # Role Management screen
@@ -93,6 +98,7 @@ info_user_save_user_before=Please save the User first to add an image
 info_user_no_user_selected=Please selected an User
 info_user_no_username_set=Please provide the User's name
 info_user_valid_expiration_date=Please enter a valid expiration date
+txt_remove_expiration_date=Remove expiration date?
 entity_user=User
 entity_user_username=Username
 entity_user_fullname=Fullname
