--- a/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/en_US/corLibError.properties
+++ b/org.openwms.core/org.openwms.client.flex.lib/src/main/resources/assets/locale/en_US/corLibError.properties
@@ -1,3 +1,29 @@
+#
+# openwms.org, the Open Warehouse Management System.
+# Copyright (C) 2014 Heiko Scherrer
+#
+# This file is part of openwms.org.
+#
+# openwms.org is free software: you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as 
+# published by the Free Software Foundation, either version 3 of the
+# License, or (at your option) any later version.
+#
+# openwms.org is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this software. If not, write to the Free Software
+# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+# 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+#
+# Main colors:
+# blue     : 2e7bb1
+# yellow   : e1e76b 
+#
+#
 # Module management
 error_module_loading=Loading or unloading a module failed. Probably the url is not correct.
 error_module_loading_details=Loading or unloading module {0} failed with error: {1}
